--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
     </label>
   </div>
 
-  <!-- Hero Section -->
-  <section class="hero" id="hero">
-    <h1 data-en="Hello, I'm Sai Jagan Yalamanchili"
-        data-hi="नमस्ते, मैं साई जगन यालामांचिली हूं"
-        data-it="Ciao, sono Sai Jagan Yalamanchili">
-        Hello, I'm Sai Jagan Yalamanchili
-    </h1>
-    <div class="typed-text"><span id="typed"></span></div>
-    <a href="assets/pdf/Sai_Resume.pdf" class="btn">📄 Download Resume</a>
-    <a href="#" class="btn" id="resume-btn">📄 View Resume</a>
-  </section>
+  <!-- Hero Section with Headshot -->
+<section class="hero" id="hero">
+  <div class="hero-content">
+    <img src="cmu-suit.jpg" alt="Sai Jagan Yalamanchili Headshot" class="hero-headshot">
+    <div>
+      <h1>Hello, I'm Sai Jagan Yalamanchili</h1>
+      <div class="typed-text"><span id="typed"></span></div>
+      <p class="hero-tagline">Project Manager | Data Analyst | Civil Engineer</p>
+      <a href="Sai_Resume.pdf" class="btn" target="_blank">📄 Download Resume</a>
+      <a href="#" class="btn" id="resume-btn">📄 View Resume</a>
+    </div>
+  </div>
+</section>
+
   <!-- Photo Gallery Section -->
 <section id="gallery" class="glass-panel" data-aos="fade-up">
   <h2>Photo Gallery</h2>
