--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
     </div>
   </div>
 </section>
+  <!-- Resume Modal -->
+<div id="resume-modal" class="modal">
+  <div class="modal-content" style="max-width:800px; min-height:500px;">
+    <iframe src="Sai_Resume.pdf" width="100%" height="500px" style="border:none;"></iframe>
+    <button onclick="document.getElementById('resume-modal').style.display='none'" class="btn" style="margin: 18px 0;">Close</button>
+  </div>
+</div>
+
 
   <!-- Photo Gallery Section -->
 <section id="gallery" class="glass-panel" data-aos="fade-up">
