--- a/index.html
+++ b/index.html
@@ -74,6 +74,41 @@
     </div>
   </div>
 </section>
+  <!-- Education & Experience -->
+<section id="experience" class="glass-panel" data-aos="fade-up">
+  <h2>Education</h2>
+  <ul class="edu-list">
+    <li>
+      <b>Central Michigan University</b> – MS in Business Data Analytics (2022-2024)<br>
+      <span>GPA: 3.47/4.0 | Michigan, USA</span>
+    </li>
+    <li>
+      <b>Politecnico di Milano</b> – MS in Built Environment (2017-2019)<br>
+      <span>GPA: 3.65/4.0 | Milan, Italy</span>
+    </li>
+    <li>
+      <b>RVR&JC College of Engineering</b> – BSc Civil Engineering (2011-2015)<br>
+      <span>India</span>
+    </li>
+  </ul>
+  <h2 style="margin-top:32px;">Professional Experience</h2>
+  <ul class="exp-list">
+    <li>
+      <b>Graduate Assistant, Central Michigan University</b> – 2022-2024<br>
+      <span>Data analysis, climate justice research, and digital projects.</span>
+    </li>
+    <li>
+      <b>Cybersecurity Intern, Cloudscale Technologies</b> – 2024<br>
+      <span>Test automation, security, and device management.</span>
+    </li>
+    <li>
+      <b>Project Planner, Pegaso Ingenieria</b> – 2020-2021<br>
+      <span>Bridge planning, Primavera P6, and data analysis.</span>
+    </li>
+    <!-- Add more as needed! -->
+  </ul>
+</section>
+
   <!-- Resume Modal -->
 <div id="resume-modal" class="modal">
   <div class="modal-content" style="max-width:800px; min-height:500px;">
