--- a/index.html
+++ b/index.html
@@ -75,38 +75,71 @@
   </div>
 </section>
   <!-- Education & Experience -->
-<section id="experience" class="glass-panel" data-aos="fade-up">
-  <h2>Education</h2>
-  <ul class="edu-list">
-    <li>
-      <b>Central Michigan University</b> – MS in Business Data Analytics (2022-2024)<br>
-      <span>GPA: 3.47/4.0 | Michigan, USA</span>
-    </li>
-    <li>
-      <b>Politecnico di Milano</b> – MS in Built Environment (2017-2019)<br>
-      <span>GPA: 3.65/4.0 | Milan, Italy</span>
-    </li>
-    <li>
-      <b>RVR&JC College of Engineering</b> – BSc Civil Engineering (2011-2015)<br>
-      <span>India</span>
-    </li>
-  </ul>
-  <h2 style="margin-top:32px;">Professional Experience</h2>
-  <ul class="exp-list">
-    <li>
-      <b>Graduate Assistant, Central Michigan University</b> – 2022-2024<br>
-      <span>Data analysis, climate justice research, and digital projects.</span>
-    </li>
-    <li>
-      <b>Cybersecurity Intern, Cloudscale Technologies</b> – 2024<br>
-      <span>Test automation, security, and device management.</span>
-    </li>
-    <li>
-      <b>Project Planner, Pegaso Ingenieria</b> – 2020-2021<br>
-      <span>Bridge planning, Primavera P6, and data analysis.</span>
-    </li>
-    <!-- Add more as needed! -->
-  </ul>
+<!-- Education & Experience Section -->
+<section id="about" class="glass-panel" data-aos="fade-up">
+  <div class="about-flex">
+    <!-- Education -->
+    <div class="about-col">
+      <h2><i class="fa fa-graduation-cap"></i> Education</h2>
+      <div class="about-cards">
+        <div class="about-card">
+          <img src="infographics/education.svg" alt="" class="about-icon">
+          <div>
+            <b>Central Michigan University</b><br>
+            MS, Business Data Analytics<br>
+            <span class="about-details">2022-2024 | GPA: 3.47/4.0 | Michigan, USA</span>
+          </div>
+        </div>
+        <div class="about-card">
+          <img src="infographics/education.svg" alt="" class="about-icon">
+          <div>
+            <b>Politecnico di Milano</b><br>
+            MS, Built Environment<br>
+            <span class="about-details">2017-2019 | GPA: 3.65/4.0 | Milan, Italy</span>
+          </div>
+        </div>
+        <div class="about-card">
+          <img src="infographics/education.svg" alt="" class="about-icon">
+          <div>
+            <b>RVR&JC College of Engineering</b><br>
+            BSc, Civil Engineering<br>
+            <span class="about-details">2011-2015 | India</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Experience -->
+    <div class="about-col">
+      <h2><i class="fa fa-briefcase"></i> Experience</h2>
+      <div class="about-cards">
+        <div class="about-card">
+          <img src="infographics/experience.svg" alt="" class="about-icon">
+          <div>
+            <b>Graduate Assistant, CMU</b><br>
+            Data analysis, climate justice research, and digital projects.<br>
+            <span class="about-details">2022-2024 | Michigan, USA</span>
+          </div>
+        </div>
+        <div class="about-card">
+          <img src="infographics/experience.svg" alt="" class="about-icon">
+          <div>
+            <b>Cybersecurity Intern, Cloudscale</b><br>
+            Test automation, security, and device management.<br>
+            <span class="about-details">2024 | Michigan, USA</span>
+          </div>
+        </div>
+        <div class="about-card">
+          <img src="infographics/experience.svg" alt="" class="about-icon">
+          <div>
+            <b>Project Planner, Pegaso Ingenieria</b><br>
+            Bridge planning, Primavera P6, and data analysis.<br>
+            <span class="about-details">2020-2021 | Romania/Italy</span>
+          </div>
+        </div>
+        <!-- Add more as needed -->
+      </div>
+    </div>
+  </div>
 </section>
 
   <!-- Resume Modal -->
