--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
     <main id="game-container" class="terminal-window">
+        <h1 class="main-title">// RECRUITER_QUEST</h1>
+
         <section id="dialogue-screen">
             <div id="npc-area">
                 <img src="cmu-suit.jpg" id="avatar" alt="User Avatar">
                 <div class="dialogue-box">
-                    <p id="dialogue-text">Initializing...</p>
+                    <p id="dialogue-text">Initializing system...</p>
                 </div>
             </div>
             <div id="player-options-container">
@@ -86,8 +88,7 @@
             <div class="challenge-box terminal-window">
               <h3>ACCESS DENIED: CLEARANCE REQUIRED</h3>
               <p id="challenge-question">To access the Skill Matrix, please answer the following:</p>
-              <div id="challenge-answers">
-                </div>
+              <div id="challenge-answers"></div>
               <p id="challenge-result"></p>
             </div>
         </div>
